# swift-testing

./: .editorconfig  .gitignore  .license_header_template  .licenseignore  .spi.yml  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE.txt  NOTICE.txt  Package.swift  Package@swift-5.11.swift  Package@swift-6.0.swift  Package@swift-6.1.swift  README.md  VERSION.txt  foo.txt  version.txt
Sources/: CMakeLists.txt
Sources/GitStatus/: main.swift
Sources/Harness/: CMakeLists.txt  Harness.swift
Sources/Overlays/: CMakeLists.txt
Sources/Overlays/_Testing_AppKit/: CMakeLists.txt  ReexportTesting.swift
Sources/Overlays/_Testing_CoreGraphics/: CMakeLists.txt  ReexportTesting.swift
Sources/Overlays/_Testing_CoreImage/: CMakeLists.txt
Sources/Overlays/_Testing_CoreTransferable/: CMakeLists.txt  ReexportTesting.swift
Sources/Overlays/_Testing_Foundation/: CMakeLists.txt  ReexportTesting.swift
Sources/Overlays/_Testing_UIKit/: CMakeLists.txt  ReexportTesting.swift
Sources/Overlays/_Testing_UniformTypeIdentifiers/: CMakeLists.txt  ReexportTesting.swift
Sources/Overlays/_Testing_WinSDK/: CMakeLists.txt  ReexportTesting.swift
Sources/Overlays/_Testing_WinSDK_GDIPlus/: GDI+.cpp
Sources/SymbolShowcase/: SymbolShowcaseMain.swift
Sources/Testing/: AsyncDefer.swift  Benchmark+Macro.swift  CMakeLists.txt  Discovery+Macro.swift  Discovery+Platform.swift  Discovery.swift  Plan.swift  Test+Cancellation.swift  Test+Discovery+Legacy.swift  Test+Discovery+Old.swift  Test+Discovery.swift  Test+Macro.swift  Test.Case.Generator.swift  Test.Case.swift  Test.ID.Selection.swift  Test.ID.swift  Test.swift
Sources/Testing/ABI/: ABI.Context.swift  ABI.Record+Streaming.swift  ABI.Record.swift  ABI.VersionNumber.swift  ABI.swift
Sources/Testing/Attachments/: Attachable.swift  AttachableContainer.swift  AttachableImageFormat.swift  AttachableWrapper.swift  Attachment.swift  Test.Attachable.swift  Test.AttachableContainer.swift  Test.Attachment.swift  UTTypeConvertible.swift
Sources/Testing/Benchmark/: BenchmarkRepetitions.swift  TestTimings.swift
Sources/Testing/Confirmations/: Confirmation.swift  Polling.swift
Sources/Testing/EntryPoints/: ABIEntryPoint.swift  EntryPoint.swift  SwiftPMEntryPoint.swift  XCTestScaffold.swift
Sources/Testing/Events/: Clock.swift  Event+FallbackEventHandler.swift  Event+FallbackHandler.swift  Event.Observer.swift  Event.Recorder.swift  Event.swift  LogMessage.swift  TimeValue.swift
Sources/Testing/ExitTests/: ExitCondition.swift  ExitStatus.swift  ExitTest.CapturedValue.swift  ExitTest.Condition.swift  ExitTest.Result.swift  ExitTest.swift  ExitTestArtifacts.swift  Spawn.swift  SpawnProcess.swift  StatusAtExit.swift  WaitFor.swift
Sources/Testing/Expectations/: Difference.swift  ExceptionHandling.swift  Expectation+Macro.swift  Expectation.swift  ExpectationChecking+Macro.swift  ExpectationContext+ObservedValue.swift  ExpectationContext+Pointers.swift  ExpectationContext.swift
Sources/Testing/Issues/: Confirmation.swift  ErrorSnapshot.swift  FloatingPointAccuracy.swift  Issue+Recording.swift  Issue.swift  KnownIssue.swift
Sources/Testing/Leaks/: Leaks.swift
Sources/Testing/Logging/: Log+External.swift  Log+OSLog.swift  Log.swift
Sources/Testing/Parameterization/: CustomTestArgument.swift  CustomTestArgumentEncodable.swift  Test.Case.Generator.swift  Test.Case.ID.Selection.swift  Test.Case.ID.swift  Test.Case.swift  Test.ID.CaseSelection.swift  TypeInfo.swift
Sources/Testing/Polling/: CallPolling.swift  Polling.swift  PollingBehavior.swift
Sources/Testing/Running/: Configuration+Current.swift  Configuration+EventHandling.swift  Configuration.Feature.swift  Configuration.TestFilter.swift  Configuration.swift  EntryPoint.swift  Runner+Repetition.swift  Runner.Context.swift  Runner.Plan+Dumping.swift  Runner.Plan.swift  Runner.RuntimeState.swift  Runner.swift  Serializer.swift  SkipInfo.swift  XCTestScaffold.swift
Sources/Testing/SourceAttribution/: Backtrace+Symbolication.swift  Backtrace.swift  CustomExpressionExpandable.swift  CustomFailureStringConvertible.swift  CustomTestArgumentStringConvertible.swift  CustomTestReflectable.swift  CustomTestStringConvertible.swift  Expression+Macro.swift  Expression.swift  ExpressionID.swift  SourceBounds.swift  SourceCode+Macro.swift  SourceCode.swift  SourceContext.swift  SourceLocation+Macro.swift  SourceLocation.swift
Sources/Testing/Support/: Allocated.swift  BugReporting.swift  CError.swift  CartesianProduct.swift  Compression.swift  CustomIssueRepresentable.swift  Environment.swift  File.swift  (+23 more)
Sources/TestingInternals/: Discovery.cpp  ExceptionHandling-ObjC.mm  ExceptionHandling.cpp  GetSymbol.cpp  WillThrow.cpp
Sources/TestingMacros/: CMakeLists.txt  ConditionMacro.swift  ExitTestCapturedValueMacro.swift  GlobalTraitMacro.swift  ObserverDeclarationMacro.swift  PlanMacro.swift  PolymorphicSuiteMacro.swift  PragmaMacro.swift  SourceLocationMacro.swift  SuiteDeclarationMacro.swift  TagMacro.swift  TargetTraitsMacro.swift  TestDeclarationMacro.swift  TestingMacrosMain.swift
Sources/TestingSyntax/: TestSyntax.swift
Sources/_Imagery/: Image+Lookup.swift  Image.Section.swift  Image.swift
Sources/_ImageryInternals/: Implementation+COFF.cpp  Implementation+Common.cpp  Implementation+ELF.cpp  Implementation+MachO.cpp
Sources/_TestDiscovery/: CMakeLists.txt  DiscoverableAsTestContent.swift  SectionBounds.swift  TestContentKind.swift  TestContentRecord.swift
Sources/_TestingInfrastructure/: CMakeLists.txt  FallbackEventHandler.swift
Sources/_TestingInternals/: CMakeLists.txt  Demangle.cpp  Discovery+Old.cpp  Discovery.cpp  ExecutablePath.cpp  GDI+.cpp  GetSymbol.cpp  IUnknown.cpp  Stubs.cpp  Versions.cpp  WillThrow.cpp  module.modulemap
Sources/_TestingInterop/: CMakeLists.txt  FallbackEventHandler.cpp  FallbackEventHandler.swift
Sources/_TestingUtilities/: CMakeLists.txt  SHA256.swift
Sources/_Testing_ExperimentalInfrastructure/: CMakeLists.txt  FallbackEventHandler.swift
Sources/_Testing_Foundation/: CMakeLists.txt  Foundation.swiftoverlay  ReexportTesting.swift
(+536 files in other folders)
