# This source file is part of the Swift.org open source project
#
# Copyright (c) 2024–2025 Apple Inc. and the Swift project authors
# Licensed under Apache License v2.0 with Runtime Library Exception
#
# See https://swift.org/LICENSE.txt for license information
# See https://swift.org/CONTRIBUTORS.txt for Swift project authors

add_subdirectory(_Testing_AppKit)
add_subdirectory(_Testing_CoreGraphics)
add_subdirectory(_Testing_CoreImage)
add_subdirectory(_Testing_Foundation)
add_subdirectory(_Testing_UIKit)
add_subdirectory(_Testing_WinSDK)
